--- a/views/home.ejs
+++ b/views/home.ejs
@@ -77,7 +77,7 @@
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
+                            <a class="nav-link" href="/enter_pin">Link</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/login">Login</a>
@@ -88,13 +88,7 @@
             </div>
         </nav>
     
-        <form id="mpinForm" action="/entre" method="POST" class="hide">
-            <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label">Enter the correct pin</label>
-                <input type="password" class="form-control" id="exampleInputPassword1" name="pin" required>
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
+
     
     
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -110,7 +104,7 @@
     set savings goals, and stay informed. Your financial well-being is our priority.🌟
         </p>
     <form action="" method="get">
-    <a href="" class="startedBtn">Get Started</a>
+    <a href="/login" class="startedBtn">Get Started</a>
     </form>    
     </div>
     </div>
