--- a/views/pin.ejs
+++ b/views/pin.ejs
@@ -86,7 +86,7 @@
 
     <button type="submit" class="btn btn-primary mpin">Generate New MPIN</button>
     <div class="btn-links">
-      <a href="/">Already have it</a>
+      <a href="/enter_pin">Already have it</a>
       <a href="/balance">Balance</a>
     </div>
   </form>
