--- a/views/home.ejs
+++ b/views/home.ejs
@@ -77,7 +77,7 @@
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/enter_pin">Link</a>
+                            <a class="nav-link" href="/enter_pin">Enter PIN</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/login">Login</a>
