--- a/views/login.ejs
+++ b/views/login.ejs
@@ -34,7 +34,7 @@
       </head>
       <body class="text-center">
         <form class="form-signin" action="/login" method="POST">
-      <img class="mb-4" src="/docs/4.3/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
+      <img class="mb-4" src="/styles/pngegg (16).png" alt="" width="72" height="72">
       <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
       <!-- <label for="inputEmail" class="sr-only">Email address</label> -->
       <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
