--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -46,7 +46,7 @@
   </label>
 </div>
 <button class="btn btn-lg btn-primary btn-block" type="submit">Sign Up</button>
-<p class="signInAlert">Already have an account? <a href="/signin">Sign In</a></p>
+<p class="signInAlert">Already have an account? <a href="/login">Sign In</a></p>
 <p class="mt-5 mb-3 text-muted">&copy; 2024</p>
 </form>
 </body>
